Profile activity test